--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -132,5 +132,31 @@
     <div class="essay">
         <p class="bold">Literature as describing what should be enacted</p>
     </div>
+    <div class="essay">
+        <p class="bold">On revolution, scholarship, and methodology</p>
+    </div>
+    <div class="essay">
+        <p class="indent">
+            Much of the scholarly literature on revolutions seeks to answer the question: why there and at that time, rather than most other places at most other times? Oppression, inequality, poverty, and arbitrary rule have been aspects of human societies near-ubiquitously for centuries, yet the vast majority of the time those conditions alone are not enough to lead people to revolution. Thus, when revolutions do occur, it is difficult to think about them in terms of their local context alone – scholarly approaches to revolution, therefore, tend to have some element of justifying (in the causal sense, not the moral sense) why a revolution happened <span class="italic">there</span> and <span class="italic">then</span>.
+        </p>
+    </div>
+    <div class="essay">
+        <p class="indent">
+            While an account of revolutionary cultures as seeking to translate to reality the visions of their founding authors may initially seem intuitive, such an account falls apart fairly quickly. Voltaire advocated a constitutional monarchy, whereas Rousseau believed the will of the people could not be expressed through representatives and that a direct democracy was therefore necessary. Neither of those contradicting visions were put into practice by French revolutionaries: how are the actions of the revolutionaries from Louis XVI’s death at the guillotine to Thermidor to be understood as such? 
+        </p>
+        <p class="indent">
+            This framework is not particularly useful for understanding the Bolsheviks’ actions, either. Despite the strong body of literature written by Bolsheviks on correctly putting Marx into practice, Russia did not correspond to an orthodox Marxist vision. Marx’s dialectic requires many steps prior to a proletarian revolution: feudalism must be abolished by a bourgeois revolution; the bourgeoisie, pursuing profit, must simplify class antagonisms by congregating people of all lower classes as their urban labor force and bring about an industrial revolution of the means of production in the process (Marx and Engels, 15-21). Unfortunately for this account, Russia did not fulfill a single one of these prerequisites: it was still a feudal nation; the vast majority of its population were peasants. If Russian revolutionary culture’s goal really was to put into practice, as Lenin put it, “what Marx really taught us” (5), then Russian revolutionary culture would not yet exist!
+        </p>
+    </div>
+    <div class="essay">
+        <p class="bold">Literature as providing language: France</p>
+    </div> 
+    <div class="essay">
+        <p class="indent">
+            Perhaps a more useful account of these nations’ revolutionary cultures and their relationship with their respective literatures is as follows: revolutionary cultures were not necessarily looking to enact the teachings of their literary predecessors, but their literary predecessors gave them a language they used to conceive of themselves and their goals. François Furet’s analysis (1981) of French revolutionary culture is a compelling case for such an account. For him, “French society… was desperately searching for responsible spokesmen” (36) – it could not find such a spokesmen in the parlements, as they “throughout the century, gave repeated proof of their conservatism, since they condemned the Encyclopédie” (36), among other offenses (given they were, after all, a body composed of nobles) so French society turned to the philosophes. This phenomenon can even be conceived of as a structural tendency: the steady loss of political function of the nobility in the years leading to the revolution (a fundamental shift corresponding to the decline of feudalism) without the Ancien Regime allowing for a new ruling class “set up the writers as imaginary substitutes for that ruling class” (36). 
+        </p>
+        <p class="indent">
+            Regardless of whether this perception was a question of the contingent dispositions of French revolutionary culture or a structural tendency in French society, it serves as a framework to understand revolutionary culture from 1789 to Thermidor. For Furet, the revolution operated by “appropriat[ing] for its own benefit the interpretation of what was meant by the ‘people’s will’” (43). As such, Sieyès’ famous “What is the Third Estate?” conceived of the nobility as existing outside of the people, therefore legitimizing the ostracization of nobles and the symbols associated with them. Later, each successive government relied on the language of the people’s will for its legitimacy. On Robespierre from 1793-1794, Furet writes:
+    </div>
 </body>
 </html>
