margins, block quote, more text

--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -56,7 +56,7 @@
         
         .essay {
             font-family: 'Garamond', sans-serif;
-            width: 600px;
+            width: 720px;
             color: #AE3179;
         }
 
@@ -64,38 +64,58 @@
             font-size: 30px;
             color: #AE3179;
             text-align: center;
-            margin: 0;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
         .essay p {
             font-size: 16px;
             color: #AE3179;
             text-align: left;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
         .essay .italic {
             font-style: italic;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
         .essay .indent {
             text-indent: 25px;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
         .essay .bold {
             font-weight: bold;
             text-align: center;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        
+        .essay .blockquote {
+            margin-left: 50px;
+            margin-right: 50px;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
         .essay a {
             color: #84D6DD;
             text-shadow: 1.5px 1.5px #E7EFC1;
             text-decoration: underline;
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
         .essay a:hover {
             color: #E7EFC1;
             text-shadow: 1.5px 1.5px #84D6DD;
             text-decoration: underline;
+            margin-top: 0;
+            margin-bottom: 0;
         }
     </style>
 </head>
@@ -149,6 +169,13 @@
         </p>
         <p class="indent">
             Regardless of whether this perception was a question of the contingent dispositions of French revolutionary culture or a structural tendency in French society, it serves as a framework to understand revolutionary culture from 1789 to Thermidor. For Furet, the revolution operated by “appropriat[ing] for its own benefit the interpretation of what was meant by the ‘people’s will’” (43). As such, Sieyès’ famous “What is the Third Estate?” conceived of the nobility as existing outside of the people, therefore legitimizing the ostracization of nobles and the symbols associated with them. Later, each successive government relied on the language of the people’s will for its legitimacy. On Robespierre from 1793-1794, Furet writes:
+        </p>
+        <p class="blockquote">
+            he [Robespierre] was the people to the national representative body; it was continually necessary to establish, control and restore the perfect fit between the people and the various assemblies that claimed to speak in its name (above all the Convention), for without that perfect fit there could be no legitimate power, and the first duty of power was to maintain it: that was the function of Terror. (60) 
+        </p>  
+        <p>
+            In terms of the initial hypothesis, the language of “the people’s will” and later “the people” in the discourse of French revolutionary culture can be thought of as a derivative of Enlightenment writing. Sieyès and Robespierre used language they learned from Enlightenment philosophes’ conception of universal human dignity and the social contract, and the system of legitimation this practice ended up creating led to the violent aspect of French revolutionary culture. In Furet’s words: “Each successive political group pursued the same objective: to radicalise the Revolution, by making it consistent with its discourse,” (70) even to the point of violence. It didn’t matter what the philosophes’ actually thought or wrote, what mattered was the process by which members of the revolutionary culture appropriated their language for their own purposes, creating the self-radicalizing paradigm that Furet describes.  
+        </p>
     </div>
 </body>
 </html>
