--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -86,7 +86,7 @@
         .essay .indent {
             text-indent: 25px;
             margin-top: 0;
-            margin-bottom: 4px;
+            margin-bottom: 6px;
         }
 
         .essay .bold {
@@ -99,8 +99,8 @@
         .essay .blockquote {
             margin-left: 50px;
             margin-right: 50px;
-            margin-top: 4px;
-            margin-bottom: 4px;
+            margin-top: 6px;
+            margin-bottom: 12px;
         }
 
         .essay .bibliography {
@@ -269,6 +269,21 @@
         <p class="indent">
             Whatever the answers to these questions may be, it is worth noting the methodology that prompted them: an exploration of the merits of various accounts of the patterns of revolutionary culture. At first glance, such an approach might seem to favor a narrative of individuals as having significant agency in the revolutionary moment, but the above accounts show that this is not necessarily the case. Beyond the innate interest in understanding the logic (or lack thereof) of revolutionary cultures, such accounts might provide a fresh framework for understanding those aforementioned questions of contingency, agency, and historical explanation. 
         </p>
+
+
+    <div class="essay", style="bottom-margin:60px">
+        <p class="bold">Footnotes</p>
+    </div>    
+    <div class="essay">
+        <p>
+           *Question mark not in original text
+        </p>
+        <p>
+           **Chartier (1991) points to Louis Sebastien Mercier as a representative example of the scorn many “High Enlightenment” writers had for other writers. Mercier believed there to be only thirty writers “worthy of name” in France who were deserving of “public consideration,” and listed “compilers, journalists, and translators” to be below that honor (1789, 7:22-28) One can imagine his view on pornography and libel.
+        </p>
+        <p>
+           ***Emphasis added.
+        </p>
     </div>
 
 
@@ -276,7 +291,7 @@
     <div class="essay">
         <p class="bold">Bibliography</p>
     </div> 
-    <div class="essay">
+    <div class="essay", style="bottom-margin:60px">
         <p class="bibliography">
             Arendt, Hannah. 1963. <span class="italic">On Revolution.</span> New York, New York: Viking Press.
         </p>
