--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -72,7 +72,7 @@
             font-size: 18px;
             color: #AE3179;
             text-align: left;
-            line-height: 1.2
+            line-height: 1.5
             margin-top: 0;
             margin-bottom: 0;
         }
@@ -107,10 +107,10 @@
             text-indent: -50px;
             padding-left: 50px;
             margin-bottom: 8px
-            line-height: 1.6
+            line-height: 1.8
         }
 
-        .essay a {
+        .essay .a {
             color: #84D6DD;
             text-shadow: 1.5px 1.5px #E7EFC1;
             text-decoration: underline;
@@ -118,7 +118,7 @@
             margin-bottom: 0;
         }
 
-        .essay a:hover {
+        .essay .a:hover {
             color: #E7EFC1;
             text-shadow: 1.5px 1.5px #84D6DD;
             text-decoration: underline;
@@ -271,10 +271,8 @@
         </p>
 
 
-    <div class="essay", style="bottom-margin:60px">
+    <div class="essay", style="bottom-margin:100px; top-margin:50px">
         <p class="bold">Footnotes</p>
-    </div>    
-    <div class="essay">
         <p>
            *Question mark not in original text
         </p>
@@ -291,7 +289,7 @@
     <div class="essay">
         <p class="bold">Bibliography</p>
     </div> 
-    <div class="essay", style="bottom-margin:60px">
+    <div class="essay", style="margin-bottom:100px">
         <p class="bibliography">
             Arendt, Hannah. 1963. <span class="italic">On Revolution.</span> New York, New York: Viking Press.
         </p>
