--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -110,7 +110,7 @@
     </div>
     <div class="caption" style="margin-bottom: 15px;"> 
         <h2>revolutionary cultures and literature: a comparative study</h2>
-        <p>december, i.e. finals season, 2023: !WARNING! !VERY! !ACADEMIC! link coming later. a paper on the cultural logic of revolutions and literature's place in that. wrote this for anne o'donnell's seminar, which was a comparative analysis of the french+russian+iranian revolutions. all of the secondary sources we read were very aware of the significance of, consequences of, and ethics of the way they chose to understand what they were writing about -- i feel like that kind of meta/methodological frame of thinking leads to nice things so i took a crack at it. </p>
+        <p>december, i.e. finals season, 2023: !WARNING! !VERY! !ACADEMIC! <a href="https://kovid-pal-odouard.github.io/thevillage-2024/revolutionary_cultures_and_literature/" class="link-element" target="_blank">LINK.</a> a paper on the cultural logic of revolutions and literature's place in that. wrote this for anne o'donnell's seminar, which was a comparative analysis of the french+russian+iranian revolutions. all of the secondary sources we read were very aware of the significance of, consequences of, and ethics of the way they chose to understand what they were writing about -- i feel like that kind of meta/methodological frame of thinking leads to nice things so i took a crack at it. </p>
     </div>
     <div class="caption" style="margin-bottom: 15px;"> 
         <h2>these diasporic feet</h2>
