--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -72,9 +72,9 @@
             font-size: 18px;
             color: #AE3179;
             text-align: left;
-            line-height: 1.5
-            margin-top: 0;
-            margin-bottom: 0;
+            line-height: 1.6
+            margin-top: 0px;
+            margin-bottom: 0px;
         }
 
         .essay .italic {
@@ -85,15 +85,15 @@
 
         .essay .indent {
             text-indent: 25px;
-            margin-top: 0;
-            margin-bottom: 6px;
+            margin-top: 0px;
+            margin-bottom: 8px;
         }
 
         .essay .bold {
             font-weight: bold;
             text-align: center;
             margin-top: 14px;
-            margin-bottom: 0;
+            margin-bottom: 0px;
         }
         
         .essay .blockquote {
@@ -106,8 +106,8 @@
         .essay .bibliography {
             text-indent: -50px;
             padding-left: 50px;
-            margin-bottom: 8px
-            line-height: 1.8
+            margin-bottom: 8px;
+            line-height: 1.8;
         }
 
         .essay .a {
@@ -271,7 +271,7 @@
         </p>
 
 
-    <div class="essay", style="bottom-margin:100px; top-margin:50px">
+    <div class="essay", style="margin-bottom:100px; margin-top:50px">
         <p class="bold">Footnotes</p>
         <p>
            *Question mark not in original text
@@ -318,7 +318,7 @@
             Lenin, Vladimir I. 1918, this edition 1976. <span class="italic">The State and Revolution: The Marxist Teaching on the State and the Tasks of the Proletariat in the Revolution.</span> Peking: Foreign Languages Press.
         </p>
         <p class="bibliography">
-            Marx, Karl, and Frederick Engels. 1848, this edition 1969, digitally 2000. “Manifesto of the Communist Party.” Marxists Internet Archive. <span class="a">https://www.marxists.org/archive/marx/works/1848/communist-manifesto/.</span>
+            Marx, Karl, and Frederick Engels. 1848, this edition 1969, digitally 2000. “Manifesto of the Communist Party.” Marxists Internet Archive. <a href="https://www.marxists.org/archive/marx/works/1848/communist-manifesto/" target="_blank">https://www.marxists.org/archive/marx/works/1848/communist-manifesto/</a>.
         </p>
         <p class="bibliography">
             Mercier, Louis-Sébastien. 1789. “Tableau de Paris.” Vol. 6. 
