--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -72,21 +72,24 @@
             font-size: 18px;
             color: #AE3179;
             text-align: left;
-            line-height: 1.6
             margin-top: 0px;
             margin-bottom: 0px;
+            line-height: 1.25;
         }
 
         .essay .italic {
             font-style: italic;
             margin-top: 0;
             margin-bottom: 0;
+            line-height: 1.25;
+
         }
 
         .essay .indent {
             text-indent: 25px;
             margin-top: 0px;
             margin-bottom: 8px;
+            line-height: 1.25;
         }
 
         .essay .bold {
@@ -94,6 +97,7 @@
             text-align: center;
             margin-top: 14px;
             margin-bottom: 0px;
+            line-height: 1.25;
         }
         
         .essay .blockquote {
@@ -101,6 +105,7 @@
             margin-right: 50px;
             margin-top: 6px;
             margin-bottom: 12px;
+            line-height: 1.25;
         }
 
         .essay .bibliography {
