--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -276,17 +276,26 @@
         </p>
 
 
-    <div class="essay", style="margin-bottom:100px; margin-top:50px">
+    <div class="essay", style="margin-top:50px">
         <p>
-           *Question mark not in original text
-        </p>
-        <p>
-           **Chartier (1991) points to Louis Sebastien Mercier as a representative example of the scorn many “High Enlightenment” writers had for other writers. Mercier believed there to be only thirty writers “worthy of name” in France who were deserving of “public consideration,” and listed “compilers, journalists, and translators” to be below that honor (1789, 7:22-28) One can imagine his view on pornography and libel.
-        </p>
-        <p>
-           ***Emphasis added.
+           *Question mark not in original text.
         </p>
     </div>
+    <div class="essay", style="margin-top:10px">
+        <p>
+           *Question mark not in original text.
+        </p>
+    </div>
+    <div class="essay", style="margin-top:10px">
+        <p>
+          **Chartier (1991) points to Louis Sebastien Mercier as a representative example of the scorn many “High Enlightenment” writers had for other writers. Mercier believed there to be only thirty writers “worthy of name” in France who were deserving of “public consideration,” and listed “compilers, journalists, and translators” to be below that honor (1789, 7:22-28) One can imagine his view on pornography and libel.
+        </p>
+    </div>
+    <div class="essay", style="margin-top:10px, margin-bottom: 80px">
+        <p>
+          ***Emphasis added.
+        </p>
+    </div>               
 
 
 <!-- BIBLIOGRAPHY  --> 
