garamond is serif

--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -55,7 +55,7 @@
         }
         
         .essay {
-            font-family: 'Garamond', sans-serif;
+            font-family: 'Garamond', serif;
             width: 720px;
             color: #AE3179;
         }
