--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -115,7 +115,7 @@
             line-height: 1.8;
         }
 
-        .essay .a {
+        .essay a {
             color: #84D6DD;
             text-shadow: 1.5px 1.5px #E7EFC1;
             text-decoration: underline;
@@ -123,7 +123,7 @@
             margin-bottom: 0;
         }
 
-        .essay .a:hover {
+        .essay a:hover {
             color: #E7EFC1;
             text-shadow: 1.5px 1.5px #84D6DD;
             text-decoration: underline;
