--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -108,9 +108,17 @@
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
+
+    
+    <div class="caption" style="margin-bottom: 15px;"> 
+        <h2>normative first: an approach to affirmative action</h2>
+        <p>december, i.e. finals season, 2023: !WARNING! !VERY! !ACADEMIC! a paper on a philosophical approach to affirmative action. wrote this for kwame anthony appiah's class: philosophical approaches to race and racism -- never before have i been able to so palpably feel a man's intellect from the way he walked into a room. anyway, i wasn't going to put this up here initially because it's not very *me* -- it's this very analytic philosophical approach to understanding the issue; it's not really my voice. i feel like these sorts of approaches are prone to missing something more intuitive because of they are built on these shaky edifices of rational construction. still, i learned a lot from this class and so it felt like i should archive that part of my education. LINK COMING</p>
+    </div>
+
+    
     <div class="caption" style="margin-bottom: 15px;"> 
         <h2>revolutionary cultures and literature: a comparative study</h2>
-        <p>december, i.e. finals season, 2023: !WARNING! !VERY! !ACADEMIC! a paper on the cultural logic of revolutions and literature's place in that. wrote this for anne o'donnell's seminar, which was a comparative analysis of the french+russian+iranian revolutions. all of the secondary sources we read were very aware of the significance of, consequences of, and ethics of the way they chose to understand what they were writing about -- i feel like that kind of meta/methodological frame of thinking leads to nice things, so i took a crack at it. <a href="https://kovid-pal-odouard.github.io/thevillage-2024/revolutionary_cultures_and_literature/" class="link-element" target="_blank">LINK.</a>  </p>
+        <p>december, i.e. finals season, 2023: !WARNING! !VERY! !ACADEMIC! a paper on the cultural logic of revolutions and literature's place in that. wrote this for anne o'donnell's seminar, which was a comparative analysis of the french+russian+iranian revolutions. great fuckin class. all of the secondary sources we read were very aware of the significance of, consequences of, and ethics of the way they chose to understand what they were writing about -- i feel like that kind of meta/methodological frame of thinking leads to nice things, so i took a crack at it. i enjoyed thinking like this. <a href="https://kovid-pal-odouard.github.io/thevillage-2024/revolutionary_cultures_and_literature/" class="link-element" target="_blank">LINK.</a>  </p>
     </div>
     <div class="caption" style="margin-bottom: 15px;"> 
         <h2>these diasporic feet</h2>
