more space for title

--- a/thevillage-2024/affirmative_action/index.html
+++ b/thevillage-2024/affirmative_action/index.html
@@ -137,7 +137,7 @@
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
-    <div class="essay">
+    <div class="essay", style="margin-bottom: 20px">
         <h1>Normative First: An Approach to Affirmative Action</h1>
     </div>
 
