--- a/thevillage-2024/affirmative_action/index.html
+++ b/thevillage-2024/affirmative_action/index.html
@@ -121,6 +121,7 @@
             text-decoration: underline;
             margin-top: 0;
             margin-bottom: 0;
+            overflow-wrap: break-word;
         }
 
         .essay a:hover {
