--- a/thevillage-2024/affirmative_action/index.html
+++ b/thevillage-2024/affirmative_action/index.html
@@ -122,6 +122,8 @@
             margin-top: 0;
             margin-bottom: 0;
             overflow-wrap: break-word;
+            word-wrap: break-word;
+
         }
 
         .essay a:hover {
