--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -121,6 +121,9 @@
             text-decoration: underline;
             margin-top: 0;
             margin-bottom: 0;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            
         }
 
         .essay a:hover {
