--- a/thevillage-2024/affirmative_action/index.html
+++ b/thevillage-2024/affirmative_action/index.html
@@ -290,7 +290,7 @@
             The argument provided here does not fall to this objection. In this case, the grounds are critical. The people are not equal. Segregation and wealth inequality are some of the most morally relevant issues in American society, and postsecondary universities, in their unique position to address them, ought to do so.  
         </p>
 
-    <div class="essay", style="margin-top:50px">
+    <div class="essay", style="margin-top:50px; margin-bottom:80px">
         <p>
            *The current one at time of writing. 
         </p>
