--- a/thevillage-2024/revolutionary_cultures_and_literature/index.html
+++ b/thevillage-2024/revolutionary_cultures_and_literature/index.html
@@ -289,7 +289,7 @@
           **Chartier (1991) points to Louis Sebastien Mercier as a representative example of the scorn many “High Enlightenment” writers had for other writers. Mercier believed there to be only thirty writers “worthy of name” in France who were deserving of “public consideration,” and listed “compilers, journalists, and translators” to be below that honor (1789, 7:22-28) One can imagine his view on pornography and libel.
         </p>
     </div>
-    <div class="essay", style="margin-top:15px, margin-bottom: 80px">
+    <div class="essay", style="margin-top:15px; margin-bottom: 80px">
         <p>
           ***Emphasis added.
         </p>
