--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -157,7 +157,7 @@
         <img src="/thevillage-2024/diasporic_feet5.jpg" alt="work">
     </div>    
     <div class="detail-images" style="--n: 2; margin-bottom: 20px;">
-        <img src="/thevillage-2024/diasporic_feet6.jpg" alt="expressive feet">
+        <img src="/thevillage-2024/diasporic_feet6.png" alt="expressive feet">
         <img src="/thevillage-2024/diasporic_feet7.jpg" alt="feelin good">
     </div>
 </body>
