minor text edits

--- a/thevillage-2024/making_sense/index.html
+++ b/thevillage-2024/making_sense/index.html
@@ -146,7 +146,7 @@
 
 
     <div class="essay">
-        <h1>Making Sense in the Diaspora</h1>
+        <h1>Making sense (in the diaspora)</h1>
     </div>
 
     <div class="essay">
@@ -159,7 +159,7 @@
         <p class="indent">
             Because of this, I’ve always liked listening to those who are a generation above me in their diaspora: those who – instead of being born away from their ancestral homes – chose to go to a new geography but still grew up, played, talked, laughed, loved, and made mistakes in their ancestral ways. I was born across the water – perhaps they are the bridges back.
         </p>
-        <p>
+        <p class="bold">
             ...
         </p>
     </div>
