--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -164,9 +164,9 @@
 
     <div class="caption" style="margin-bottom: 15px;">
         <h2>making sense (in the diaspora)</h2>
-        <p>february, 2024: now <span class="italic">this</span> is more like it. thinking of my place as a creator in the diaspora, this time in a more explicit format (and one i'm a little more familiar with -- not necessarily sure about how to feel about that). i wrote this for victoria anderson's writing the essay class. it's a short one, a nice microcosm of the world offered by her class: the possibilities offered by recursive motion in writing; the possibilties offered by an attempt to let the voices of other creators sing. <a href="kovid-pal-odouard.github.io/thevilage-2024/making_sense" class="link-element" target="_blank">LINK</a></p>
+        <p>february, 2024: now <span class="italic">this</span> is more like it. thinking of my place as a creator in the diaspora, this time in a more explicit format (and one i'm a little more familiar with -- not necessarily sure about how to feel about that). i wrote this for victoria anderson's writing the essay class. it's a short one, a nice microcosm of the world offered by her class: the possibilities offered by recursive motion in writing; the possibilties offered by an attempt to let the voices of other creators sing. <a href="https://kovid-pal-odouard.github.io/thevilage-2024/making_sense" class="link-element" target="_blank">LINK</a></p>
     </div>
 
-    
+
 </body>
 </html>
