closed unclosed div tags

--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -208,17 +208,17 @@
     <div class="caption" style="margin-bottom: 15px;">
         <h2>contemplation in and of nicomachean ethics: understanding aristotle's philosophical project</h2>
         <p>february, 2024: like a lot of philosophy papers, this one feels very [Δ]→{}→[]∴[.], if you know what i mean. these last three essays are all from sanford diehl's ethics class, which definitely gave me a lot more literacy in [Δ]→{}→[]∴[.] and i think was great for my philosophical literacy / knowledge of the history of ideas. the part of this essay that makes me smile is that 400 word footnote at the end, the rest i think has at least some value in the way it distills the project of nichomachean ethics (maybe). LINK COMING.</p>
-    </div
+    </div>
 
     <div class="caption" style="margin-bottom: 15px;">
         <h2>sidgwick and singer: the other and esoteric morality</h2>
         <p>late april, 2024: more [Δ]→{}→[]∴[.], if you know what i mean. this one doesn't really make me smile, lol, it's pretty clean though. it's about the relationship between sidgwick and peter singer's claims about actions that supposedly derive their permissibiity fro the fact that others aren't doing them. LINK COMING.</p>
-    </div
+    </div>
 
     <div class="caption" style="margin-bottom: 15px;">
         <h2>a free will under its own universal(izable) law: considering a charitable reading of kant's groundwork</h2>
         <p>early april, 2024: the ultimate [Δ]→{}→[]∴[.], if you know what i mean. dweeb paper, honestly, kant deserves no charity. i don't know how much you have to contort your very being to shape yourself to think that the rational will is the one thing that is good and NOTHING else in life has inherent dignity because it resides in the world of empirical contingencies. kant is really out there with his homies thinking "i should do that which a good will undistracted by the heteronomous causality of the empirical world and guided only by the autonomous law of free will would self-legislate." i do appreciate kant in a way, though: there's a real clean logic to how he derives an ethics from first principles in such a short book. LINK COMING.</p>
-    </div
+    </div>
 
 </body>
 </html>
