--- a/thevillage-2024/rory_ferreira/index.html
+++ b/thevillage-2024/rory_ferreira/index.html
@@ -187,44 +187,110 @@
         </p>
         <p class="blockquote">
             We came running, innocent
+        </p>
+        <p class="blockquote">
             Laughing blobs of blood and faith
+        </p>
+        <p class="blockquote">
             Through this mother-father world, where laughter seems out of place
+        </p>
+        <p class="blockquote">
             We learned to cry, please, they pronounce you human being
+        </p>
+        <p class="blockquote">
             The secret jazz blew a sigh, I grew a third eye
+        </p>
+        <p class="blockquote">
             And a fourth and fifth, never knowing the price of pork or cigs
+        </p>
+        <p class="blockquote">
             Some familiar sound shouts, "Wait!"
+        </p>
+        <p class="blockquote">
             Some are evil, some will hate
+        </p>
+        <p class="blockquote">
             We got busy, stayed hidden, eloped
+        </p>
+        <p class="blockquote">
             Life in the warzone, super atomic color cinemascope
+        </p>
+        <p class="blockquote">
             Charitable wallets, screams are stereophonic
+        </p>
+        <p class="blockquote">
             Marsellus Wallace
+        </p>
+        <p class="blockquote">
             with them pipe hittin' niggas gettin' ready to –
+        </p>
+        <p class="blockquote">
             Go medieval, hopscotching grassy knolls, like Knievel
+        </p>
+        <p class="blockquote">
             Rifle at the easel, my specialty is retrievals
+        </p>
+        <p class="blockquote">
             From the back of the mind, believing in the swinging
+        </p>
+        <p class="blockquote">
             The sound of my skull unhinging
+        </p>
+        <p class="blockquote">
             They were too busy dying on living ground to hear a simple sound
+        </p>
+        <p class="blockquote">
             Too busy earning medals for killing children
+        </p>
+        <p class="blockquote">
             In super atomic color cinemascope
+        </p>
+        <p class="blockquote">
             Listening to jazz through all these important things going on
+        </p>
+        <p class="blockquote">
             (Ferreira “bob’s son cafe”, At the chess table)
         </p>
         <p>
             Before seamlessly flowing into lines from Bob Kaufman’s Jail Poems***– the 7th is recited in its almost its entirety, the final line, “Thank God for the Beatniks” replaced with “Thank God for the ruby yacht poet gang”, Rory’s label:
         </p>
-        <p class="indent">
+        <p class="blockquote">
             My, soul demanding a cave of its own (6, line 2)
+        </p>
+        <p class="blockquote">
             My, soul demanding a cave of its own (6, line 2)
+        </p>
+        <p class="blockquote">
             Someone who I am is, no one (7, line 1)
+        </p>
+        <p class="blockquote">
             Something I have done is nothing (7, line 2)
+        </p>
+        <p class="blockquote">
             Someplace I have been is nowhere (7, line 3)
+        </p>
+        <p class="blockquote">
             I am not me (7, line 4)
+        </p>
+        <p class="blockquote">
             What of the answers I must find questions for? (7, line 5)
+        </p>
+        <p class="blockquote">
             All these strange cities (very similar to 7, line 6, which says “streets” instead of “cities”)
+        </p>
+        <p class="blockquote">
             I must find streets for  (very similar to 7, line 7, which says “cities” instead of “streets”)
+        </p>
+        <p class="blockquote">
             Thank – God for the ruby yacht poet gang
+        </p>
+        <p class="blockquote">
             Thank – God for the ruby yacht poet gang
+        </p>
+        <p class="blockquote">
             Thank — God for the ruby yacht poet gang
+        </p>
+        <p class="blockquote">
             (Ferreira “bob’s son cafe”, At the chess table)
         </p>
         <p class="indent">
