--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -228,7 +228,7 @@
 
     <div class="caption" style="margin-bottom: 15px;">
         <h2>sidgwick and singer: the other and esoteric morality</h2>
-        <p>late april, 2024: !WARNING! !VERY! !ACADEMIC! more [Δ]→{}→[]∴[.], if you know what i mean. this one doesn't really make me smile, lol, it's pretty clean though. it's about the relationship between sidgwick and peter singer's claims about actions that supposedly derive their permissibiity fro the fact that others aren't doing them. LINK COMING.</p>
+        <p>late april, 2024: !WARNING! !VERY! !ACADEMIC! more [Δ]→{}→[]∴[.], if you know what i mean. this one doesn't really make me smile, lol, it's pretty clean though. it's about the relationship between sidgwick and peter singer's claims about actions that supposedly derive their permissibiity for the fact that others aren't doing them. LINK COMING.</p>
     </div>
 
     <div class="caption" style="margin-bottom: 15px;">
