--- a/thevillage-2024/melted_contours/index.html
+++ b/thevillage-2024/melted_contours/index.html
@@ -165,6 +165,9 @@
             Nieztsche’s formulations provided me with an interesting way to think about what I ended up with: contour lines are “metaphors, metonymies, and anthropomorphisms” (56) of the physical form of the mountains. They are something which takes a “colorful, irregular” world that is “lacking in results and coherence” (60) – the Rockies – and reduces it to the most simple thing: one dimension, a line. But, both in the moments when we ceased to follow our conventional navigation frameworks and in the moments when the contour lines ceased to refer to sensical objects, I realized that “Truths are illusions which we have forgotten are illusions; they are metaphors that have become worn out and have been drained of sensuous force, coins which have lost their embossing and are now considered as metal and no longer as coins” (56).
         </p>
         <p class="indent">
+            Interestingly, this confluence of sensical and nonsensical contour lines, of a “web of concepts” and the ruptures where it was “torn by art” (Nietzsche, 59), of accepted metaphor and illegible echoes of it ended up looking like a fluid. Put another way, the “regular and rigid new world is constructed as its prison from its own ephemeral products, the concepts” (Nietzsche, 59) – breaking down that construction leaves only that ephemeral product, and ephemerality in the visual realm is represented as fluid.
+        </p>
+        <p class="indent">
             Thus, my attempt at artistic expression of the experience of sympoiesis brought me to the very same formulation that Coccia reaches in his ontology of plants: life as a fluid space. When, as Nietzsche describes it, the illusory (or really, illusion-based) logic of human epistemology broke down, what was left was a visual representation of Coccia’s expression of the most basic ontological reality of life. For Coccia, the fact of life engaging in collaborative transformation (or, making-with) from the very same material as the stars means that Earth’s surface is “not a space, it is a subtle transparent body, barely perceivable by touch or by sight. But it is from this fluid, which envelops everything… that we have the colors, forms, smells, and tastes of the world… It is this fluid that makes us think; it is this fluid that makes us live and love” (49).
         </p>
         <p class="indent">
@@ -186,7 +189,7 @@
           Haraway, Donna J. Sympoeisis: Symbiogenesis and the Lively Arts of Staying with the Trouble.” <span class="italic">Staying with the trouble: Making kin in the Chthulucene.</span> Duke University Press, 2016, pp 59-98.
         </p>
         <p class="bibliography">
-          Nietzsche, Friedrich. <span class="italic">On Truth and Lie in an Extra-Moral Sense.</span> Translated by Daniel Breazeale, 1896, pp 53-62. 
+          Nietzsche, Friedrich. <span class="italic">On Truth and Lie in an Extra-Moral Sense.</span> Translated by Daniel Breazeale, 1896, pp 53-62.
         </p>
 </body>
 </html>
