--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
         </div>
         <div class="lil-message-text">
-            guys i'm moving to crown heights in june!!!
+            welcome to the family, brother!
         </div>
     </div>
     <div class="link-container">
