new page! weeksville fish coloniality

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             color: #543D0D;
             text-shadow: 2px 2px #D0B884;
             padding: 8px; /* Add padding for background */
-            background-color: #F2EAD3; 
+            background-color: #F2EAD3;
             text-decoration: none; /* Remove underline from text */
         }
         .link-element:hover {
@@ -131,7 +131,7 @@
             color: #AE3179;
             text-shadow: 2px 2px #D5A454;
             padding: 8px; /* Add padding for background */
-            background-color: #EDD2E3; 
+            background-color: #EDD2E3;
             text-decoration: none; /* Remove underline from text */
         }
         .link2-element:hover {
@@ -174,7 +174,7 @@
             <p>now has a website!</p>
         </div>
         <div class="additional-text">
-            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! if anything on this website doesn't work, it's just camp bro <3 
+            an archive to store / a place to share the things i create. to hell with corporation-constructed, algorithmically-arranged digital spaces! this digital space was made by a human who doesn't know how to code (with the help of chat gpt, lol). the principles are consistent, i swear! if anything on this website doesn't work, it's just camp bro <3
         </div>
         <div class="imagecaption">
             Image: Accidental mewing session @ wash during the eclipse. Taken by QUINN KAMMER
@@ -191,6 +191,11 @@
     <div class="link2-container">
         <a href="https://kovid-pal-odouard.github.io/thevillage-2024/" class="link2-element" target="_blank">
             stuff from the village ~2024
+        </a>
+    </div>
+    <div class="link2-container">
+        <a href="https://kovid-pal-odouard.github.io/weeksville-2024/" class="link2-element" target="_blank">
+            something new!!!
         </a>
     </div>
 </body>
