--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -23,7 +23,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Press Start 2P', sans-serif;
-            color: #CA9849;
+            color: #B07643;
         }
 
         .heading-text {
@@ -34,7 +34,7 @@
         .heading-text h1 {
             font-size: 40px;
             margin: 0;
-            text-shadow: 5.5px 2px #B07643, 8px 4px #B07643;
+            text-shadow: 5.5px 2px #CA9849, 8px 4px #CA9849;
         }
 
         .heading-text p,
