--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
             stuff from the village ~2024
         </a>
     </div>
-    <div class="link3-container">
-        <a href="https://kovid-pal-odouard.github.io/weeksville-2024/" class="link2-element" target="_blank">
+    <div class="link3-container" style="margin-top:10px">
+        <a href="https://kovid-pal-odouard.github.io/weeksville-2024/" class="link3-element" target="_blank">
             something new!!!
         </a>
     </div>
