--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -43,7 +43,7 @@
             margin: 8px 0 0 0;
             font-size: 34px;
             text-decoration: none;
-            color: #B07643;
+            color: #692041;
         }
 
         .heading-text a:hover {
