--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -43,7 +43,7 @@
             margin: 8px 0 0 0;
             font-size: 34px;
             text-decoration: none;
-            color: #692041;
+            color: #953AB0;
         }
 
         .heading-text a:hover {
@@ -80,7 +80,7 @@
         .caption h2 {
             font-size: 32px;
             color: #DAD4ED;
-            text-shadow: 2px 2px #692041, 3.5px 3.5px #B07643;
+            text-shadow: 2px 2px #953AB0, 3.5px 3.5px #B07643;
             margin: 0;
         }
 
