--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             position: absolute;
             top: 3px;
             left: 3px;
-            background-color: #692041;
+            background-color: #953AB0;
             width: 100%; /* Adjust width to cover full element */
             height: 100%; /* Adjust height to cover full element */
             z-index: -1;
