--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -43,7 +43,7 @@
             margin: 8px 0 0 0;
             font-size: 34px;
             text-decoration: none;
-            color: #953AB0;
+            color: #AB2068;
         }
 
         .heading-text a:hover {
@@ -92,7 +92,7 @@
 
         .caption a {
             color: #DAD4ED;
-            text-shadow: 1.5px 1.5px #692041;
+            text-shadow: 1.5px 1.5px #AB2068;
             text-decoration: underline;
         }
 
