--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -34,7 +34,7 @@
         .heading-text h1 {
             font-size: 40px;
             margin: 0;
-            text-shadow: 5.5px 2px #CA9849, 8px 4px #CA9849;
+            text-shadow: 5.5px 2px #AB2068, 8px 4px #CA9849;
         }
 
         .heading-text p,
