--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -34,7 +34,7 @@
         .heading-text h1 {
             font-size: 40px;
             margin: 0;
-            text-shadow: 5.5px 2px #AB2068, 8px 4px #CA9849;
+            text-shadow: 5.5px 2px #CA9849, 8px 4px #CA9849;
         }
 
         .heading-text p,
@@ -80,7 +80,7 @@
         .caption h2 {
             font-size: 32px;
             color: #DAD4ED;
-            text-shadow: 2px 2px #B07643, 3.5px 3.5px #B07643;
+            text-shadow: 2px 2px #953AB0, 3.5px 3.5px #B07643;
             margin: 0;
         }
 
